--- a/_config.yml
+++ b/_config.yml
@@ -4,5 +4,5 @@ collections:
 plugins:
   - jekyll-seo-tag
 title: "TRADE SCHOOL @ UNDERSTUDY | January 24-28, 2017 | Denver, CO"
-google_analytics: 
+google_analytics: "UA-111929567-1"
 baseurl: 
