--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,10 @@
 collections:
-  events:
+  talks:
     output: true
+    permalink: '/:name'
 plugins:
   - jekyll-seo-tag
 title: "TRADE SCHOOL @ UNDERSTUDY | January 24-28, 2018 | Denver, CO"
 google_analytics: "UA-111929567-1"
-baseurl: 
+baseurl: "/"
+future: true
