--- a/_config.yml
+++ b/_config.yml
@@ -17,11 +17,11 @@ social:
     - https://twitter.com/somethingindpnt
     - https://www.facebook.com/SomethingIndependent/
     - https://www.instagram.com/somethingindependent/
-logo: "/assets/trade-school-ig.png"
+logo: assets/trade-school-ig.png
 defaults:
   - scope:
       path: ""
     values:
-      image: /assets/trade-school-ig.png
+      image: assets/trade-school-ig.png
 google_analytics: "UA-111929567-1"
 future: true
