--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,8 @@ collections:
     permalink: '/:name'
 plugins:
   - jekyll-seo-tag
+  - jekyll-sitemap
+url: "http://trade-school.co"
 title: "TRADE SCHOOL @ UNDERSTUDY | January 24-28, 2018 | Denver, CO"
 description: "Five days of art and talks exploring the nature of work, set against the backdrop of North America’s largest gathering of outdoor industry leaders"
 url: http://trade-school.co/
