Move content into `fragments` to make it editable in Forestry

--- a/_config.yml
+++ b/_config.yml
@@ -50,3 +50,7 @@ defaults:
       type: talks
     values:
       edition: "summer-2018"
+  - scope:
+      path: "fragments"
+    values:
+      published: false
