--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ defaults:
   - scope:
       path: ""
     values:
-      image: assets/trade-school-ig.png
+      image: assets/trade-school-ig.jpg
       last_modified_at: now
   - scope:
       path: ""
