Update social image path

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ social:
     - https://twitter.com/somethingindpnt
     - https://www.facebook.com/SomethingIndependent/
     - https://www.instagram.com/somethingindependent/
-logo: assets/trade-school-ig.png
+logo: assets/trade-school-ig.jpg
 # Collections
 collections:
   talks:
