--- a/.forestry/front_matter/templates/talks-_talks-summer-2018.yml
+++ b/.forestry/front_matter/templates/talks-_talks-summer-2018.yml
@@ -34,7 +34,7 @@ fields:
   label: Image
   type: text
   hidden: false
-  default: assets/trade-school-ig.png
+  default: assets/trade-school-ig.jpg
 - name: last_modified_at
   label: Last modified at
   type: text
